--- a/src/libnma/nma-mobile-wizard.ui
+++ b/src/libnma/nma-mobile-wizard.ui
@@ -142,7 +142,6 @@
             <property name="label" translatable="yes">Create a connection for _this mobile broadband device:</property>
             <property name="use_underline">True</property>
             <property name="xalign">0</property>
-            <property name="yalign">1</property>
           </object>
           <packing>
             <property name="expand">False</property>
@@ -427,7 +426,7 @@
               <object class="GtkImage">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="yalign">0</property>
+                <property name="valign">start</property>
                 <property name="icon_name">dialog-warning</property>
                 <property name="icon_size">6</property>
               </object>
