--- a/src/libnma/nma-vpn-password-dialog.ui
+++ b/src/libnma/nma-vpn-password-dialog.ui
@@ -189,7 +189,7 @@
                 <property name="margin_end">12</property>
                 <property name="margin_top">6</property>
                 <property name="margin_bottom">6</property>
-                <property name="yalign">0</property>
+                <property name="valign">start</property>
                 <property name="icon_name">dialog-password</property>
                 <property name="icon_size">6</property>
               </object>
