--- a/src/libnma/wifi.ui
+++ b/src/libnma/wifi.ui
@@ -36,7 +36,7 @@
       <object class="GtkImage" id="image1">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
-        <property name="yalign">0</property>
+        <property name="valign">start</property>
         <property name="icon_name">network-wireless</property>
         <property name="icon_size">6</property>
       </object>
