--- a/src/libnma/nma-vpn-password-dialog.ui
+++ b/src/libnma/nma-vpn-password-dialog.ui
@@ -86,8 +86,8 @@
             </child>
             <child>
               <object class="GtkEntry" id="password_entry_tertiary">
+                <property name="visible">False</property>
                 <property name="can_focus">True</property>
-                <property name="no_show_all">True</property>
                 <property name="visibility">False</property>
                 <property name="width_chars">20</property>
                 <signal name="activate" handler="gtk_window_activate_default" swapped="yes"/>
@@ -99,9 +99,8 @@
             </child>
             <child>
               <object class="GtkEntry" id="password_entry_secondary">
-                <property name="visible">True</property>
+                <property name="visible">False</property>
                 <property name="can_focus">True</property>
-                <property name="no_show_all">True</property>
                 <property name="visibility">False</property>
                 <property name="width_chars">20</property>
                 <signal name="activate" handler="gtk_window_activate_default" swapped="yes"/>
@@ -113,9 +112,8 @@
             </child>
             <child>
               <object class="GtkEntry" id="password_entry">
-                <property name="visible">True</property>
+                <property name="visible">False</property>
                 <property name="can_focus">True</property>
-                <property name="no_show_all">True</property>
                 <property name="visibility">False</property>
                 <property name="width_chars">20</property>
                 <signal name="activate" handler="gtk_window_activate_default" swapped="yes"/>
@@ -127,8 +125,8 @@
             </child>
             <child>
               <object class="GtkLabel" id="password_label_tertiary">
+                <property name="visible">False</property>
                 <property name="can_focus">False</property>
-                <property name="no_show_all">True</property>
                 <property name="label" translatable="yes">_Tertiary Password:</property>
                 <property name="use_underline">True</property>
                 <property name="mnemonic_widget">password_entry_tertiary</property>
@@ -141,9 +139,8 @@
             </child>
             <child>
               <object class="GtkLabel" id="password_label_secondary">
-                <property name="visible">True</property>
+                <property name="visible">False</property>
                 <property name="can_focus">False</property>
-                <property name="no_show_all">True</property>
                 <property name="label" translatable="yes">_Secondary Password:</property>
                 <property name="use_underline">True</property>
                 <property name="mnemonic_widget">password_entry_secondary</property>
@@ -156,9 +153,8 @@
             </child>
             <child>
               <object class="GtkLabel" id="password_label">
-                <property name="visible">True</property>
+                <property name="visible">False</property>
                 <property name="can_focus">False</property>
-                <property name="no_show_all">True</property>
                 <property name="label" translatable="yes">_Password:</property>
                 <property name="use_underline">True</property>
                 <property name="mnemonic_widget">password_entry</property>
@@ -171,8 +167,8 @@
             </child>
             <child>
               <object class="GtkLabel" id="message_label">
+                <property name="visible">False</property>
                 <property name="can_focus">False</property>
-                <property name="no_show_all">True</property>
                 <property name="halign">start</property>
                 <property name="margin_bottom">12</property>
                 <property name="hexpand">True</property>
